Added facebook authentication.

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,4 +11,11 @@
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaks }}</p>
     </div>
+	
+	<div
+	class="fb-like"
+	data-share="true"
+	data-width="450"
+	data-show-faces="true">
+	</div>
 {% endblock %}
