--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,21 +2,49 @@
 
 <html>
 
-    <head>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!-- Bootstrap -->
+		<link href="/static/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
+		<link href="/static/css/fbposter.css" rel="stylesheet">
+
 		<title>Django Girls blog</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="{% static "css/blog.css" %}">
+		<link rel="stylesheet" href="{% static "css/blog.css" %}">
 		<link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     </head>
 	
 
 	<body>
+	
+		<script>
+		window.fbAsyncInit = function() {
+		FB.init({
+		  appId      : '717905068338950',
+		  xfbml      : true,
+		  version    : 'v2.4'
+		});
+		};
+
+		(function(d, s, id){
+		 var js, fjs = d.getElementsByTagName(s)[0];
+		 if (d.getElementById(id)) {return;}
+		 js = d.createElement(s); js.id = id;
+		 js.src = "//connect.facebook.net/en_US/sdk.js";
+		 fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+		</script>
+
 		<div class="page-header">
 			{% if user.is_authenticated %}
 				<a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 			{% endif %}
-			<h1><a href="/">Django Girls Blog</a></h1>
+			<h1><a href="/post/list/">Django Blog</a></h1>
 		</div>
 		<div class="content container">
 			<div class="row">
@@ -26,6 +54,12 @@
 				</div>
 			</div>
 		</div>
+		
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="/static/js/bootstrap.min.js"></script>
+
 	</body>
 
 </html>
